mychart/templates/mongodb_deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: sledrich
spec:
  selector:
    app: mongodb
  clusterIP: None
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
