mychart/templates/webdb_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdb
  namespace: sledrich
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webdb
  template:
    metadata:
      labels:
        app: webdb
    spec:
      containers:
      - name: webdb
        image: sophieledrich/challenge3_flask_app_db:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"  # 1/10 CPU
            memory: "100Mi"  # 100 Mo
          limits:
            cpu: "200m"  # 1/5 CPU
            memory: "200Mi"  # 200 Mo
        livenessProbe:             #le serveur web http couche 7
          httpGet:                # probe HTTP car c’est une API Flask => Vérifie via httpGet que le serveur répond à /healthz
            path: /
            port: 5000
          initialDelaySeconds: 60  # Attendre 5s avant la première vérification
          periodSeconds: 120       # Vérifier toutes les 10s
---
apiVersion: v1
kind: Service
metadata:
  name: webdb-service
  namespace: sledrich
spec:
  selector:
    app: webdb
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
