mychart/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mychart-ingress
  namespace: sledrich
spec:
  ingressClassName: nginx
  rules:
    - host: webnodb.sledrich.net4255.luxbulb.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webnodb-service
                port:
                  number: 5000
    - host: webdb.sledrich.net4255.luxbulb.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webdb-service
                port:
                  number: 5000
